# classroom-transcriber

./: .gitignore  package-lock.json  package.json  requirements.txt  whisperx_standalone.py  whisperx_transcribe.py
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  db.rs  lib.rs  main.rs  sync.rs  whisper.rs
